; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/utils/iwcap/src/extr_iwcap.c_check_type.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/utils/iwcap/src/extr_iwcap.c_check_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@ifname = common dso_local global i32 0, align 4
@IFNAMSIZ = common dso_local global i32 0, align 4
@capture_sock = common dso_local global i32 0, align 4
@SIOCGIFHWADDR = common dso_local global i32 0, align 4
@ARPHRD_IEEE80211_RADIOTAP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_type() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.ifreq, align 8
  %3 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %2, i32 0, i32 1
  %4 = load i32, i32* %3, align 8
  %5 = load i32, i32* @ifname, align 4
  %6 = load i32, i32* @IFNAMSIZ, align 4
  %7 = call i32 @strncpy(i32 %4, i32 %5, i32 %6)
  %8 = load i32, i32* @capture_sock, align 4
  %9 = load i32, i32* @SIOCGIFHWADDR, align 4
  %10 = call i64 @ioctl(i32 %8, i32 %9, %struct.ifreq* %2)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %20

13:                                               ; preds = %0
  %14 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %2, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @ARPHRD_IEEE80211_RADIOTAP, align 8
  %18 = icmp eq i64 %16, %17
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %13, %12
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @strncpy(i32, i32, i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.ifreq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
